# ai_anime

./: .gitignore  README.md  init_python_project.sh  main.py  pyproject.toml  requirements.txt  start_server.sh
api/: main.py  models.py
assets/episodes/: episode_001.json
comfy/: __init__.py  client.py  workflow.json  workflow.py
config/: voice_config.json
episodes/: episode_001.json
output/: episode_001.srt
scripts/: call_comfyui.py  generate_srt.py  main.py  render_episode.py  render_video.py
services/: audio_service.py  episode_service.py  image_service.py  srt_service.py  video_service.py
static/: index.html
workflows/: image_gen.json
